# janus

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
conf/: app.yaml
conf/environments/: cluster.env.example  cluster.yaml  local.env.example  local.yaml
conf/schemas/dados_abertos_catalog/: catalog_metadata_schema.json
conf/schemas/example/: source_schema.json
conf/schemas/ibge/: pib_brasil_schema.json
conf/schemas/inep/: censo_escolar_microdados_schema.json
conf/schemas/transparencia/: gastos_cartoes_cartoes_schema.json  (+1 more)
conf/sources/: dados_abertos_catalog.yaml  example_source.yaml  ibge.yaml  ibge_agro_abacaxi_pronaf.yaml  inep.yaml  transparencia.yaml
docker/: Dockerfile  docker-compose.podman.yml  docker-compose.yml
docs/: PRD.md  architecture.md  foundation.md  reproducibility.md  source-onboarding.md  spark_runtime_storage_readers_writers_and_normalization_base.md  strategy-patterns.md
docs/implementations/: api_request_inputs_and_parameter_bindings.md  api_strategy_core.md  catalog_strategy_core.md  core_models_and_strategy_interfaces.md  file_strategy_core.md  ibge_sidra_integration.md  inep_microdata_integration.md  observability_checkpoints_and_lineage.md  planner_and_entry_point.md  quality_and_validation_layer.md  receita_federal_cnpj_integration.md  source_registry_and_config_contracts.md  spark_runtime_storage_readers_writers_and_normalization_base.md
src/janus/: __init__.py  main.py  schema_contracts.py
tests/unit/: test_environment_baseline.py  test_runtime_baseline.py
(+115 files in other folders)
